# error_mancer

./: .copier-answers.yml  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  justfile
.github/workflows/: ci.yml  publish.yml
error_mancer/: Cargo.toml
error_mancer/src/: lib.rs
error_mancer/tests/: anyhow.rs  async.rs  basic.rs  derive.rs  flatten.rs  name.rs
error_mancer/tests/ui/: missing_return_type.rs  missing_return_type.stderr  no_errors_anyhow.rs  no_errors_anyhow.stderr  not_fn.rs  not_fn.stderr
error_mancer_macros/: Cargo.toml
error_mancer_macros/src/: lib.rs
