[package]
name = "error_mancer"
version = "0.2.2"
edition = "2021"
description = "Master your errors with precision, context, and effortless control."
license = "MIT"

[dependencies]
error_mancer_macros = {path = "../error_mancer_macros", version="0.2.1"}

[dev-dependencies]
trybuild = "1"
anyhow = "1"
thiserror = "2"
